--- a/Strona 1/style.css
+++ b/Strona 1/style.css
@@ -194,8 +194,8 @@ button{
     justify-content: center;
     width: 60%;
     height: 100%;
-    background: gray;
-    background: linear-gradient(to left top, var(--grey),var(--dark));
+    /* background: gray;
+    background: linear-gradient(to left top, var(--grey),var(--dark)); */
 }
 .plytka{
 
